force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__TotalExposure__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TotalExposure__c</fullName>
    <description>Total exposure</description>
    <label>Total Exposure</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>