force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__Type_Code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Type_Code__c</fullName>
    <description>Type_Code</description>
    <label>Type_Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>