force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__VendorHitCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorHitCode__c</fullName>
    <description>VendorHitCode</description>
    <label>VendorHitCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>