force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__VendorHitCodeText__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorHitCodeText__c</fullName>
    <description>VendorHitCodeText</description>
    <label>VendorHitCodeText</label>
    <length>40</length>
    <type>Text</type>
</CustomField>