force-app/main/default/objects/SCOC__SummaryInformation__c/fields/SCOC__WasDelinquentDerogatoryCounter__c.field-meta.xml
<CustomField>
    <fullName>SCOC__WasDelinquentDerogatoryCounter__c</fullName>
    <description>Total number of tradelines with past derogatory status codes.</description>
    <label>Was Delinquent Derogatory Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>